@@ -1,13 +1,16 @@
 package ru.vspochernin.rx;
 
 import org.junit.jupiter.api.Test;
+
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.*;
 
 class SchedulerTest {
+
     @Test
     void testSubscribeOn() throws InterruptedException {
         CountDownLatch latch = new CountDownLatch(1);
@@ -15,7 +18,7 @@ class SchedulerTest {
         DefaultObserver<Integer> observer = new DefaultObserver<>();
 
         Observable<Integer> observable = Observable.create(obs -> {
-            threadId.set((int) Thread.currentThread().getId());
+            threadId.set((int) Thread.currentThread().threadId());
             obs.onNext(1);
             obs.onNext(2);
             obs.onNext(3);
@@ -24,11 +27,11 @@ class SchedulerTest {
         });
 
         observable
-            .subscribeOn(IOThreadScheduler.getInstance())
-            .subscribe(observer);
+                .subscribeOn(IOThreadScheduler.getInstance())
+                .subscribe(observer);
 
         assertTrue(latch.await(1, TimeUnit.SECONDS));
-        assertNotEquals(Thread.currentThread().getId(), threadId.get());
+        assertNotEquals(Thread.currentThread().threadId(), threadId.get());
         assertEquals(List.of(1, 2, 3), observer.getItems());
         assertTrue(observer.isCompleted());
     }
@@ -48,27 +51,27 @@ class SchedulerTest {
         });
 
         observable
-            .observeOn(ComputationScheduler.getInstance())
-            .subscribe(new Observer<Integer>() {
-                @Override
-                public void onNext(Integer item) {
-                    threadId.set((int) Thread.currentThread().getId());
-                    observer.onNext(item);
-                }
+                .observeOn(ComputationScheduler.getInstance())
+                .subscribe(new Observer<>() {
+                    @Override
+                    public void onNext(Integer item) {
+                        threadId.set((int) Thread.currentThread().threadId());
+                        observer.onNext(item);
+                    }
 
-                @Override
-                public void onError(Throwable t) {
-                    observer.onError(t);
-                }
+                    @Override
+                    public void onError(Throwable t) {
+                        observer.onError(t);
+                    }
 
-                @Override
-                public void onComplete() {
-                    observer.onComplete();
-                }
-            });
+                    @Override
+                    public void onComplete() {
+                        observer.onComplete();
+                    }
+                });
 
         assertTrue(latch.await(1, TimeUnit.SECONDS));
-        assertNotEquals(Thread.currentThread().getId(), threadId.get());
+        assertNotEquals(Thread.currentThread().threadId(), threadId.get());
         assertEquals(List.of(1, 2, 3), observer.getItems());
         assertTrue(observer.isCompleted());
     }
@@ -81,7 +84,7 @@ class SchedulerTest {
         DefaultObserver<Integer> observer = new DefaultObserver<>();
 
         Observable<Integer> observable = Observable.create(obs -> {
-            subscribeThreadId.set((int) Thread.currentThread().getId());
+            subscribeThreadId.set((int) Thread.currentThread().threadId());
             obs.onNext(1);
             obs.onNext(2);
             obs.onNext(3);
@@ -90,29 +93,29 @@ class SchedulerTest {
         });
 
         observable
-            .subscribeOn(IOThreadScheduler.getInstance())
-            .observeOn(ComputationScheduler.getInstance())
-            .subscribe(new Observer<Integer>() {
-                @Override
-                public void onNext(Integer item) {
-                    observeThreadId.set((int) Thread.currentThread().getId());
-                    observer.onNext(item);
-                }
+                .subscribeOn(IOThreadScheduler.getInstance())
+                .observeOn(ComputationScheduler.getInstance())
+                .subscribe(new Observer<>() {
+                    @Override
+                    public void onNext(Integer item) {
+                        observeThreadId.set((int) Thread.currentThread().threadId());
+                        observer.onNext(item);
+                    }
 
-                @Override
-                public void onError(Throwable t) {
-                    observer.onError(t);
-                }
+                    @Override
+                    public void onError(Throwable t) {
+                        observer.onError(t);
+                    }
 
-                @Override
-                public void onComplete() {
-                    observer.onComplete();
-                }
-            });
+                    @Override
+                    public void onComplete() {
+                        observer.onComplete();
+                    }
+                });
 
         assertTrue(latch.await(1, TimeUnit.SECONDS));
-        assertNotEquals(Thread.currentThread().getId(), subscribeThreadId.get());
-        assertNotEquals(Thread.currentThread().getId(), observeThreadId.get());
+        assertNotEquals(Thread.currentThread().threadId(), subscribeThreadId.get());
+        assertNotEquals(Thread.currentThread().threadId(), observeThreadId.get());
         assertNotEquals(subscribeThreadId.get(), observeThreadId.get());
         assertEquals(List.of(1, 2, 3), observer.getItems());
         assertTrue(observer.isCompleted());
